--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 </form>
         </div>
       </div>
+      <div class ="row">
+              <div class ="col-xs-12">
+                <button type="button" class="btn btn-light" id="toggle-all">All</button>
+                <button type="button" class="btn btn-light" id="toggle-active">Active</button>
+                <button type="button" class="btn btn-light" id="toggle-completed" >Completed</button>
+              </div>
+            </div>
     </div>
   </body>
 </html>
